tests/baselines/reference/exportEqualErrorType.errors.txt
error TS5107: Option 'module=AMD' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
exportEqualErrorType_1.ts(3,23): error TS2339: Property 'static' does not exist on type '{ (): connectExport; foo: Date; }'.


!!! error TS5107: Option 'module=AMD' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== exportEqualErrorType_1.ts (1 errors) ====
    ///<reference path='exportEqualErrorType_0.ts'/>
    import connect = require('exportEqualErrorType_0');
    connect().use(connect.static('foo')); // Error  1      The property 'static' does not exist on value of type ''.
                          ~~~~~~
!!! error TS2339: Property 'static' does not exist on type '{ (): connectExport; foo: Date; }'.
    
==== exportEqualErrorType_0.ts (0 errors) ====
    namespace server {
        export interface connectModule {
            (res, req, next): void;
        }
        export interface connectExport {
            use: (mod: connectModule) => connectExport;
        }
    }
    var server: {
        (): server.connectExport;
        foo: Date;
    };
    export = server;
     